# everest-optimizers

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CONSTRAINT_TESTS_SUMMARY.md  CONTRIBUTING.md  Dockerfile  Makefile  NOTICE  OPTPP-van-shanno-fix.patch  README.md  debug_pyopttpp.py  make_sqlitedict_optional.patch  pyoptsparse.patch  pyproject.toml  pytest.ini  run_constraint_tests.sh  setup.py  test_optimization.py
.github/: dependabot.yml
.github/workflows/: publish.yml  static-checks.yml  testing.yml
ci/: testkomodo.sh
dakota-packages/: JEGA-unary-func.patch  JEGA_design_multi_set_inl.patch  acro-cxx_standard_17.patch  muq-remove-boost-directory-iterator-test.patch  muq-remove-boost-filesystem.patch
dakota-packages/CONMIN/src/: program.f
dakota-packages/JEGA/Utilities/include/inline/: DesignGroup.hpp.inl  DesignMultiSet.hpp.inl
dakota-packages/JEGA/eddy/logging/logs/: ostream_log.hpp
dakota-packages/OPTPP/: CMakeLists.txt  trilinos
dakota-packages/OPTPP/python/: CMakeLists.txt  README.md  pyopttpp.cpp  test_opttpp.py
dakota-packages/OPTPP/tests/: constraint_tests.C  constraint_tests.h
dakota-packages/demo_tpl/dakota_src/: DemoOptimizer.cpp  DemoOptimizer.hpp
dakota-packages/muq2/cmake/checks/: CheckBoost.cmake
dakota-packages/muq2/cmake/finds/: FindBOOSTMUQ.cmake
dakota-packages/trilinos/: project-checkin-test-config.py
dakota-packages/trilinos/cmake/tribits/ci_support/: CDashAnalyzeReportRandomFailures.py  CDashQueryAnalyzeReport.py  CheckinTest.py  CreateIssueTrackerFromCDashQuery.py  FindGeneralScriptSupport.py  TribitsDependencies.py  TribitsPackageFilePathUtils.py  TribitsPackageTestNameUtils.py  cdash_analyze_and_report.py  cdash_build_testing_date.py  checkin-test.py  clone_extra_repos.py  dump-package-dep-table.py  filter-packages-list.py  get-tribits-packages-from-files-list.py  get-tribits-packages-from-last-tests-failed.py  get-tribits-packages.py
dakota-packages/trilinos/cmake/tribits/ctest_driver/: dump-cdash-deps-xml-file.py
dakota-packages/trilinos/cmake/tribits/devtools_install/: FindGeneralScriptSupport.py  InstallProgramDriver.py  install-autoconf.py  install-cmake.py  install-git.py  install-mpich.py  install-openmpi.py  install_devtools.py
dakota-packages/trilinos/cmake/tribits/python_utils/: CMakeBinaries.py  CMakeVersions.py  GeneralScriptSupport.py  GenerateDocUtilsOutput.py  Python2and3.py  SnapshotDir.py  extract_rst_cmake_doc.py  generate-docutils-output.py  generic-looping-demon.py  gitdist.py  lower_case_cmake.py  mailmsg.py  mockprogram.py  snapshot-dir.py  tree.py
dakota-packages/trilinos/cmake/tribits/refactoring/: string-replace.py  token-replace.py
dakota-packages/trilinos/commonTools/build_stats/: BuildStatsData.py  FindTribitsCiSupportDir.py  gather_build_stats.py  summarize_build_stats.py
dakota-packages/trilinos/commonTools/refactoring/: string-replace.py  update-copyright-header.py
include/: COPYRIGHT
src/: OPTQNewton.cpp  simple_test.cpp
src/OPTPP-python/: CMakeLists.txt  pyoptpp.cpp
src/OPTPP-python/tests/: constraint_tests.C  constraint_tests.h  pyoptpp_tests.cpp
src/dakota-packages/OPTPP/python/: README.md  test_opttpp.py
src/dakota-packages/trilinos/: TrilinosRepoVersion.txt
src/dakota-packages/trilinos/cmake/: ProjectCiFileChangeLogic.py
src/everest_optimizers/: __init__.py  _conminmfd.py  _convert_constraints.py  _optbcqnewton.py  _optqnewton.py  _optqnips.py  _optqnips_impl.py  _problem.py  _utils.py  conminmfd.py  dummy_implementation.py  minimize.py  optqnewton.py  optqnips_impl.py
src/everest_optimizers/pyCONMIN/: pyCONMIN.py
src/everest_optimizers/pyoptpp/: __init__.py  _pyoptpp.pyi
src/everest_optimizers/pyoptsparse/: pyOpt_constraint.py  pyOpt_gradient.py  pyOpt_history.py  pyOpt_optimization.py  pyOpt_optimizer.py  pyOpt_utils.py  pyOpt_variable.py
src/everest_optimizers_utils/: __init__.py  dummy_implementation.py
test/: simple_test.py  test_optimization.py
tests/: README_CONSTRAINT_TESTS.md  simple_test.py  test_backend.py  test_cpp_constraint_tests.py  test_everest_optimizers_interface.py  test_everest_optimizers_optimization.py  test_general_constraints.py  test_optimization.py
tests/CONMIN/: test_conmin_mfd.py  test_conmin_vs_carolina.py
tests/OPTPP/: compare_strategies.py  test_cpp_constraint_tests.py
tests/OPTPP/manual_tests/: compare_strategies.py  test_cpp_constraint_tests.py  test_opttpp.py
tests/OPTPP/optpp_bcq_newton/: test_2_compare_to_ropt.py  test_2_compare_to_scipy.py  test_2_config.py  test_2_constrained_bounds.py  test_2_unconstrained.py
tests/OPTPP/optpp_constr_q_newton/: test_2_compare_to_ropt.py  test_2_compare_to_scipy.py  test_2_config.py  test_2_constrained_bounds.py  test_2_constrained_linear.py  test_2_constrained_nonlinear.py  test_2_mixed.py  test_2_unconstrained.py
tests/OPTPP/optpp_q_newton/: test_1_compare_to_ropt.py  test_1_compare_to_scipy.py  test_1_config.py  test_1_constrained_nonlinear.py  test_1_mixed.py  test_1_unconstrained.py
tests/OPTPP/optpp_q_nips/: test_3_compare_to_ropt.py  test_3_compare_to_scipy.py  test_3_config.py  test_3_constrained_bounds.py  test_3_constrained_linear.py  test_3_constrained_nonlinear.py  test_3_mixed.py  test_3_unconstrained.py
tests/OptQNewton/: compare_problems.py  compare_strategies.py  scipy_vs_OptQNewton.py  test_OptQNewton.py  test_OptQNewton_expanded.py
tests/dakota/: test_dakota.py
tests/optpp_q_newton/opt_q_nips/: test_compare_to_scipy.py  test_config.py  test_constrained_bounds.py  test_constrained_nonlinear.py  test_minimize.py  test_unconstrained.py
tests/ropt-dakota-vs-everest-optimizers/: test_ropt_dakota_vs_everest_optimizers.py
tests/ropt_dakota_vs_everest_optimizers/: test_everest_expected_results.py  test_numerical_similarity.py  test_optimizer_convergence.py  test_ropt_expected_results.py  test_scipy_expected_results.py
tests/ropt_dakota_vs_everest_optimizers/optqnips/: test_optqnips.py  test_optqnips_comprehensive_constraints.py  test_optqnips_everest_expected_results.py  test_optqnips_expanded.py
trilinos/: VERSION
(+14 files in other folders)
