
[build-system]
requires = [
  "numpy",
  "scikit-build-core",
  "meson",
  "pybind11",
  "swig; sys_platform == 'darwin'",
]
build-backend = "scikit_build_core.build"

[project]
name = "everest-optimizers"
description = "Everest optimization algorithms for Python"
version = "0.2.0"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["scipy", "mdolab-baseclasses", "sqlitedict", "pydantic"]

[dependency-groups]
test = [
  "pytest",
  "numpy",
  "cmake",
  "ropt",
  "ropt-dakota;python_version<'3.14'",
  "matplotlib",
]
dev = [
  "meson",
  "scikit-build-core",
  "swig; sys_platform == 'darwin'",
  { include-group = "test" },
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["tests/CONMIN", "tests/OPTPP"]

[tool.cibuildwheel]
build-frontend = "build[uv]"
test-groups = ["test"]
test-command = ["pytest {package}/tests/CONMIN", "pytest {package}/tests/OPTPP"]

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
manylinux-pypy_x86_64-image = "manylinux_2_28"
manylinux-pypy_aarch64-image = "manylinux_2_28"
before-all = "dnf update -y && dnf install -y lapack lapack-devel"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "PGH", # pygrep-hooks
  "RUF", # Ruff-specific
  "UP",  # pyupgrade
]
