
[build-system]
requires = [
  "meson",
  "numpy",
  "pybind11",
  "scikit-build-core",
  "setuptools_scm",
  "swig; sys_platform == 'darwin'",
]
build-backend = "scikit_build_core.build"

[project]
name = "everest-optimizers"
description = "Everest optimization algorithms for Python"
dynamic = ["version"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
]
license = "LGPL-3.0-or-later"
license-files = [
  "LICENSE",
  "NOTICE",
  "third-party/pyoptsparse/LICENSE",
  "third-party/dakota-packages/OPTPP/GNU_LGPL",
  "third-party/dakota-packages/trilinos/LICENSE",
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["scipy", "mdolab-baseclasses", "sqlitedict", "pydantic"]

[dependency-groups]
test = [
  "pytest",
  "numpy",
  "cmake",
  "ropt",
  "ropt-dakota;python_version<'3.14'",
  "matplotlib",
]
dev = [
  "meson",
  "mypy",
  "scikit-build-core",
  "scipy-stubs",
  "setuptools_scm",
  "swig; sys_platform == 'darwin'",
  { include-group = "test" },
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
  "ignore:numpy.ndarray size changed, may indicate binary incompatibility.*:RuntimeWarning"
]
testpaths = ["tests/CONMIN", "tests/OPTPP"]

[tool.setuptools_scm]

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/pybind_module/_version.py"]

[tool.cibuildwheel]
build-frontend = "build[uv]"
test-groups = ["test"]
test-command = ["pytest {package}/tests/CONMIN", "pytest {package}/tests/OPTPP"]

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
manylinux-pypy_x86_64-image = "manylinux_2_28"
manylinux-pypy_aarch64-image = "manylinux_2_28"
before-all = "dnf update -y && dnf install -y lapack lapack-devel"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = [
  "A",
  "AIR",
  "ASYNC",
  "B",   # flake8-bugbear
  "DJ",
  "DTZ",
  "F",
  "FA",
  "FAST",
  "FLY",
  "FURB",
  "I",   # isort
  "INT",
  "ISC",
  "NPY",
  "PD",
  "PERF",
  "PGH", # pygrep-hooks
  "PIE",
  "PLC",
  "PLE",
  "PLW",
  "PT",
  "PYI",
  "Q",
  "RSE",
  "RUF", # Ruff-specific
  "SIM",
  "SLF",
  "SLOT",
  "TID",
  "UP",  # pyupgrade
  "W",
  "YTT",
]
preview = true
