
[build-system]
requires = [
  "meson",
  "ninja",
  "numpy",
  "pybind11",
  "scikit-build-core",
  "setuptools_scm",
  "swig",
]
build-backend = "scikit_build_core.build"

[project]
name = "everest-optimizers"
description = "Everest optimization algorithms for Python"
dynamic = ["version"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
]
license = "LGPL-3.0-or-later"
license-files = ["LICENSE", "NOTICE"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["scipy", "mdolab-baseclasses", "sqlitedict", "pydantic"]

[dependency-groups]
test = [
  "pytest",
  "numpy",
  "cmake",
  "ropt",
  "ropt-dakota;python_version<'3.14'",
  "matplotlib",
]
dev = [
  "meson",
  "mypy",
  "ruff",
  "scikit-build-core",
  "scipy-stubs",
  "setuptools_scm",
  "swig; sys_platform == 'darwin'",
  { include-group = "test" },
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
  "ignore:numpy.ndarray size changed, may indicate binary incompatibility.*:RuntimeWarning",
]
testpaths = ["tests/CONMIN", "tests/OPTPP"]

[tool.setuptools_scm]

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/pybind_module/_version.py"]

[tool.cibuildwheel]
build-frontend = "build[uv]"
test-groups = ["test"]
test-command = ["pytest {package}/tests/CONMIN", "pytest {package}/tests/OPTPP"]

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
manylinux-pypy_x86_64-image = "manylinux_2_28"
manylinux-pypy_aarch64-image = "manylinux_2_28"
before-all = "dnf update -y && dnf install -y lapack lapack-devel"

[tool.ruff]
target-version = "py311"
extend-exclude = ["_pyoptpp.pyi"]

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
  "COM812", # missing-trailing-comma
  "CPY",    # flake8-copyright
  "D203",   # incorrect-blank-line-before-class
  "D213",   # multi-line-summary-second-line
  "E501",   # line-too-long
  "S101",   # assert
]


[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "D",       # pydocstyle
  "ANN401",  # anytype
  "PLC2701", # import-private-name
  "PLR2004", # magic-value-comparison
  "PLR0913", # too-many-arguments
]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "everest_optimizers.pyoptpp._pyoptpp"
ignore_errors = true
